change installation of files
Introduced CONDINST for binaries, such that tests need not to be
installed when --disable-testing is given, but make check still works.

Only install headers that are actually useful for an external consumer.
In principle, these are only the headers that are connected to a library
that we install in ${libdir}.

Only install public consumable libs in ${libdir}, the rest under
${libdir}/monetdb*/(lib)?.

Install public headers in include/monetdb.

Lowercase the directories being used.

--- a/clients/examples/C/Makefile.ag
+++ b/clients/examples/C/Makefile.ag
@@ -21,9 +21,10 @@ INCLUDES = ../../mapilib ../../../common/options $(READLINE_INCS)
 MAPI_LIBS = $(SOCKET_LIBS) 
 
 BINS = {
-	DIR = libdir/MonetDB/Tests
+	CONDINST = HAVE_TESTING
+	DIR = libdir/monetdb/tests
 	SOURCES = sample0.c sample1.c sample2.c sample3.c sample4.c \
-		smack00.c  smack01.c
+		smack00.c smack01.c
 	LIBS = $(MAPI_LIBS) ../../mapilib/libmapi \
 		../../../common/options/libmoptions \
 		$(curl_LIBS)
