--- a/monetdb5/modules/kernel/Makefile.ag
+++ b/monetdb5/modules/kernel/Makefile.ag
@@ -61,23 +61,9 @@ lib_kernel = {
 		unix.mx
 }
 
-headers_h = {
-	DIR = includedir/MonetDB5/kernel
-	SOURCES = \
-		calc.mx bat5.mx algebra.mx status.mx unix.mx \
-		mmath.mx lock.mx sema.mx alarm.mx  batifthen.mx \
-		batcast.mx batcalc.mx batmmath.mx \
-		aggr.mx \
-		aggr_be_sum.mx aggr_be_prod.mx aggr_be_avg.mx aggr_be_minmax.mx aggr_be_count.mx \
-		aggr_bge_sum.mx aggr_bge_prod.mx aggr_bge_avg.mx aggr_bge_minmax.mx aggr_bge_count.mx \
-		counters.mx microbenchmark.mx \
-		batstr.mx batmtime.mx batcolor.mx group.mx array.mx logger.mx
-	HEADERS = h 
-}
-
 headers_mal = {
 	HEADERS = mal
-	DIR = libdir/MonetDB5
+	DIR = libdir/monetdb5
 	SOURCES = calc.mx bat5.mx algebra.mx status.mx unix.mx \
 		mmath.mx lock.mx sema.mx alarm.mx batstr.mx batmtime.mx \
 		batcolor.mx batifthen.mx batcast.mx batcalc.mx batmmath.mx \
