--- a/clients/examples/php/Makefile.ag
+++ b/clients/examples/php/Makefile.ag
@@ -18,6 +18,7 @@
 MTSAFE
 
 scripts_php = {
-	DIR = libdir/MonetDB/Tests
+	COND = HAVE_TESTING
+	DIR = libdir/monetdb/tests
 	SOURCES = sqlsample.php xquerysample.php
 }
