--- a/clients/perl/Tests/Makefile.ag
+++ b/clients/perl/Tests/Makefile.ag
@@ -18,7 +18,8 @@
 MTSAFE
 
 scripts_pl = {
-	DIR = libdir/MonetDB/Tests
+	COND = HAVE_TESTING
+	DIR = libdir/monetdb/tests
 	SOURCES = sqlsample.pl.in milsample.pl.in malsample.pl.in
 }
 
