--- a/monetdb4/modules/calibrator/Makefile.ag
+++ b/monetdb4/modules/calibrator/Makefile.ag
@@ -25,18 +25,12 @@ EXTRA_DIST = calib_analyse.c  calib_main.c  calib_print.c  calib_run.c \
 	calib_common.c   calib_plot.c  calib_smp.c
 
 LIBS = {
-	DIR = libdir/MonetDB4
+	DIR = libdir/monetdb4
 	SEP = _
 	SOURCES = calib.mx 
 	#SCRIPTS = mil ""
 	LIBS = ../../monet/libmonet ../../../gdk/libbat \
 		$(SOCKET_LIBS) $(MALLOC_LIBS) $(PTHREAD_LIBS) $(DL_LIBS) $(MATH_LIBS)
-}
-
-HEADERS = {
-	DIR = includedir/MonetDB4/calibrator
-	SOURCES = calib.mx
-	HEADERS = h m
 }
 
 BINS = {
@@ -46,6 +40,6 @@ BINS = {
 
 headers_mil = {
 	HEADERS = mil
-	DIR = libdir/MonetDB4
+	DIR = libdir/monetdb4
 	SOURCES = calib.mx
 }
