--- a/monetdb4/modules/contrib/Makefile.ag
+++ b/monetdb4/modules/contrib/Makefile.ag
@@ -24,7 +24,7 @@ INCLUDES = ../../monet ../plain \
 MTSAFE
 
 LIBS = {
-	DIR = libdir/MonetDB4
+	DIR = libdir/monetdb4
 	SEP = _
 	SOURCES = \
 		bitset.mx malalgebra.mx \
@@ -42,24 +42,9 @@ LIBS = {
 		$(MALLOC_LIBS) $(PTHREAD_LIBS) $(DL_LIBS) $(MATH_LIBS)
 }
 
-headers_contrib = {
-	DIR = includedir/MonetDB4/contrib
-	SOURCES = \
-		bitset.mx malalgebra.mx \
-		mel.mx uchr.mx salgebra.mx vector.mx \
-		wisc.mx \
-		bat_mmath.mx bat_cast.mx array.mx color.mx \
-		image.mx txtsim.mx
-
-		# bitvector.mx ddbench.mx iterator.mx oo7.mx qt.mx
-	HEADERS = h proto.h m
-}
-
-# mprof.mx
-
 headers_mil = {
 	HEADERS = mil
-	DIR = libdir/MonetDB4
+	DIR = libdir/monetdb4
 	SOURCES = \
 		bitset.mx malalgebra.mx \
 		mel.mx uchr.mx salgebra.mx vector.mx \
