--- a/monetdb5/modules/mal/Makefile.ag
+++ b/monetdb5/modules/mal/Makefile.ag
@@ -68,25 +68,9 @@ lib_mal = {
 		zorder.mx
 }
 
-headers_h = {
-	DIR = includedir/MonetDB5/mal
-	SOURCES = batExtensions.mx bpm.mx mal_mapi.mx mal_io.mx clients.mx \
-		pcre.mx bbp.mx tablet.mx transaction.mx statistics.mx \
-		chopper.mx constraints.mx language.mx box.mx \
-		profiler.mx const.mx attach.mx algebraExtensions.mx \
-		inspect.mx manual.mx pqueue.mx mkey.mx \
-		factories.mx groupby.mx mdb.mx  \
-		urlbox.mx mat.mx histogram.mx \
-		sabaoth.mx remote.mx  recycle.mx \
-		cluster.mx trader.mx replication.mx pma.mx \
-		tokenizer.mx zorder.mx
-
-	HEADERS = h 
-}
-
 headers_mal = {
 	HEADERS = mal
-	DIR = libdir/MonetDB5
+	DIR = libdir/monetdb5
 	SOURCES = language.mx constraints.mx mal_init.mx box.mx bbp.mx \
 		profiler.mx const.mx attach.mx batExtensions.mx algebraExtensions.mx \
 		inspect.mx manual.mx mal_io.mx pqueue.mx mkey.mx \
