--- a/monetdb5/optimizer/Makefile.ag
+++ b/monetdb5/optimizer/Makefile.ag
@@ -81,29 +81,9 @@ lib_optimizer = {
 		opt_trace.mx
 }
 
-headers_optimizer = {
-	DIR = includedir/MonetDB5/optimizer
-	SOURCES =  opt_prelude.mx \
-		opt_support.mx  opt_crack.mx optimizer.mx  opt_factorize.mx \
-		opt_deadcode.mx opt_garbageCollector.mx opt_strengthReduction.mx \
-		opt_aliases.mx opt_constants.mx opt_commonTerms.mx opt_datacyclotron.mx \
-		opt_coercion.mx opt_emptySet.mx opt_peephole.mx opt_multiplex.mx \
-		opt_singleton.mx opt_costModel.mx opt_reduce.mx opt_macro.mx \
-		opt_accumulators.mx opt_qep.mx opt_mergetable.mx \
-		opt_remoteQueries.mx opt_joinselect.mx opt_partitions.mx \
-		opt_datacell.mx opt_reorder.mx opt_prejoin.mx opt_compression.mx \
-		opt_evaluate.mx opt_inline.mx opt_pushranges.mx opt_derivepath.mx \
-		opt_accessmode.mx opt_joinpath.mx opt_heuristics.mx opt_remap.mx \
-		opt_statistics.mx opt_trace.mx  opt_recycler.mx opt_dataflow.mx \
-		opt_cluster.mx  opt_replication.mx opt_dictionary.mx opt_mapreduce.mx \
-		opt_mitosis.mx opt_octopus.mx opt_tarantula.mx  opt_history.mx opt_selcrack.mx opt_sidcrack.mx
-
-	HEADERS = h 
-}
-
 headers_mal = {
 	HEADERS = mal
-	DIR = libdir/MonetDB5
+	DIR = libdir/monetdb5
 	SOURCES =  opt_prelude.mx \
 		opt_support.mx  opt_crack.mx optimizer.mx  opt_factorize.mx \
 		opt_deadcode.mx opt_garbageCollector.mx opt_strengthReduction.mx \
