--- a/monetdb5/tools/monetdb-embeddedclient.pc.in
+++ b/monetdb5/tools/monetdb-embeddedclient.pc.in
@@ -6,7 +6,7 @@ includedir=@includedir@
 Name: monetdb-embeddedclient
 Description: MonetDB5 MAL kernel embedded library
 Version: @PACKAGE_VERSION@
-Requires: monetdb-gdk monetdb-mutils monetdb-stream monetdb-mapi
+Requires: monetdb-gdk monetdb-moptions monetdb-stream monetdb-mapi
 
 Libs: -L${libdir} -lembeddedmal
-Cflags: -I${includedir}/MonetDB5/tools
+Cflags: -I${includedir}/monetdb/m5
