--- a/pathfinder/modules/geoxml/Makefile.ag
+++ b/pathfinder/modules/geoxml/Makefile.ag
@@ -41,7 +41,7 @@ INCLUDES = \
 PF_LIBS = $(libxml2_LIBS) $(DL_LIBS)
 
 lib__geoxml = {
-	DIR = libdir/MonetDB4
+	DIR = libdir/monetdb4
 	SOURCES = geoxml.mx serialize_geometry.mx
 
 	LIBS = \
@@ -58,7 +58,7 @@ lib__geoxml = {
 
 headers_mil = {
 	HEADERS = mil
-	DIR = libdir/MonetDB4
+	DIR = libdir/monetdb4
 	SOURCES = geoxml.mx
 }
 
