--- a/pathfinder/runtime/Makefile.ag
+++ b/pathfinder/runtime/Makefile.ag
@@ -69,7 +69,7 @@ lib_xrpc_common = {
 }
 
 lib__pf_support = {
-	DIR = libdir/MonetDB4
+	DIR = libdir/monetdb4
 	SOURCES = \
 		pf_support.mx \
 		shredder.mx 
@@ -89,7 +89,7 @@ lib__pf_support = {
 }
 
 lib__pf_standoff = {
-	DIR = libdir/MonetDB4
+	DIR = libdir/monetdb4
 	SOURCES = \
 		pf_standoff.mx 
 
@@ -107,7 +107,7 @@ lib__pf_standoff = {
 }
 
 lib__pathfinder = {
-	DIR = libdir/MonetDB4
+	DIR = libdir/monetdb4
 	SOURCES = \
 		pathfinder.mx
 
@@ -145,7 +145,7 @@ lib__pathfinder = {
 }
 
 lib__xrpc_client = {
-	DIR = libdir/MonetDB4
+	DIR = libdir/monetdb4
 	SOURCES = xrpc_client.mx
 	LIBS = \
 		libserialize libxrpc_common \
@@ -160,7 +160,7 @@ lib__xrpc_client = {
 }
 
 lib__xrpc_server = {
-	DIR = libdir/MonetDB4
+	DIR = libdir/monetdb4
 	SOURCES = \
 		shttpd.c shttpd.h \
 		xrpc_server.mx
@@ -181,6 +181,6 @@ lib__xrpc_server = {
 
 headers_mil = {
 	HEADERS = mil
-	DIR = libdir/MonetDB4
+	DIR = libdir/monetdb4
 	SOURCES = pathfinder.mx pf_support.mx pf_standoff.mx xrpc_client.mx xrpc_server.mx 
 }
