--- a/sql/backends/monet5/monetdb-embeddedsql.pc.in
+++ b/sql/backends/monet5/monetdb-embeddedsql.pc.in
@@ -6,7 +6,7 @@ includedir=@includedir@
 Name: monetdb-embeddedsql
 Description: MonetDB5 SQL embedded library
 Version: @PACKAGE_VERSION@
-Requires: monetdb-mutils monetdb-stream monetdb-mapi
+Requires: monetdb-moptions monetdb-stream monetdb-mapi
 
 Libs: -L${libdir} -lembeddedsql5
-Cflags: -I${includedir}/MonetDB5/sql
+Cflags: -I${includedir}/monetdb/sql
